api_versioned_docs/version-12.0.0/avalonia/opengl/glconsts.mdx
---
title: 'GlConsts'
hide_title: true
slug: '/avalonia/opengl/glconsts'
uid: 'Avalonia.OpenGL.GlConsts'
commentId: 'T:Avalonia.OpenGL.GlConsts'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.OpenGL'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.OpenGL'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">GlConsts Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.OpenGL</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.OpenGL</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class GlConsts
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> GlConsts
</div>
</div>

## Fields

| Name | Description |
| --- | --- |
| [GL_ACTIVE_TEXTURE](#uid-0ffb5002d2) | No summary available. |
| [GL_ARRAY_BUFFER](#uid-189c1f291e) | No summary available. |
| [GL_BGRA](#uid-58b52fc097) | No summary available. |
| [GL_COLOR_ATTACHMENT0](#uid-decc73c4ef) | No summary available. |
| [GL_COLOR_BUFFER_BIT](#uid-31c7c26d12) | No summary available. |
| [GL_COMPILE_STATUS](#uid-ca9523e89d) | No summary available. |
| [GL_CONTEXT_COMPATIBILITY_PROFILE_BIT](#uid-86be639a64) | No summary available. |
| [GL_CONTEXT_CORE_PROFILE_BIT](#uid-53a1d87692) | No summary available. |
| [GL_CONTEXT_LOST](#uid-8503d80ea7) | No summary available. |
| [GL_CONTEXT_PROFILE_MASK](#uid-84ade7c718) | No summary available. |
| [GL_CULL_FACE](#uid-694571cd46) | No summary available. |
| [GL_DEPTH24_STENCIL8](#uid-37a6e8c95f) | No summary available. |
| [GL_DEPTH_ATTACHMENT](#uid-177eb0a8e4) | No summary available. |
| [GL_DEPTH_BUFFER_BIT](#uid-0c2b321034) | No summary available. |
| [GL_DEPTH_COMPONENT](#uid-0b78b075b7) | No summary available. |
| [GL_DEPTH_COMPONENT16](#uid-062d42e818) | No summary available. |
| [GL_DEPTH_STENCIL](#uid-a6c8481b11) | No summary available. |
| [GL_DEPTH_TEST](#uid-5bf023d3c4) | No summary available. |
| [GL_DEVICE_LUID_EXT](#uid-9c8182f17f) | No summary available. |
| [GL_DRAW_FRAMEBUFFER](#uid-ed7755e3cd) | No summary available. |
| [GL_ELEMENT_ARRAY_BUFFER](#uid-8e7c2ab8de) | No summary available. |
| [GL_EXTENSIONS](#uid-18c09d2a9e) | No summary available. |
| [GL_FLOAT](#uid-8ed4c0bdc2) | No summary available. |
| [GL_FRAGMENT_SHADER](#uid-61f4ecb599) | No summary available. |
| [GL_FRAMEBUFFER](#uid-28969d39e1) | No summary available. |
| [GL_FRAMEBUFFER_BINDING](#uid-dcb078eba6) | No summary available. |
| [GL_FRAMEBUFFER_COMPLETE](#uid-434b74b448) | No summary available. |
| [GL_GREATER](#uid-e9fc4aa46b) | No summary available. |
| [GL_INFO_LOG_LENGTH](#uid-129576563e) | No summary available. |
| [GL_INVALID_ENUM](#uid-f326a9ce7b) | No summary available. |
| [GL_INVALID_FRAMEBUFFER_OPERATION](#uid-7fdeeaafa6) | No summary available. |
| [GL_INVALID_OPERATION](#uid-1661accf13) | No summary available. |
| [GL_INVALID_VALUE](#uid-a8329141a1) | No summary available. |
| [GL_LESS](#uid-568f35d009) | No summary available. |
| [GL_LINEAR](#uid-9448dbbcda) | No summary available. |
| [GL_LINK_STATUS](#uid-fc4ff05d88) | No summary available. |
| [GL_MAJOR_VERSION](#uid-8826cfaeb1) | No summary available. |
| [GL_MINOR_VERSION](#uid-09d81efe2c) | No summary available. |
| [GL_NEAREST](#uid-cf1f7f5377) | No summary available. |
| [GL_NO_ERROR](#uid-ebbb371fef) | No summary available. |
| [GL_NUM_EXTENSIONS](#uid-7fba9a19c4) | No summary available. |
| [GL_OUT_OF_MEMORY](#uid-4a5b644eed) | No summary available. |
| [GL_READ_FRAMEBUFFER](#uid-66d5cca0d0) | No summary available. |
| [GL_READ_FRAMEBUFFER_BINDING](#uid-bfcb0499cb) | No summary available. |
| [GL_RENDERBUFFER](#uid-8ad9129883) | No summary available. |
| [GL_RENDERBUFFER_BINDING](#uid-ef4b04f765) | No summary available. |
| [GL_RENDERBUFFER_HEIGHT](#uid-e99d9ff888) | No summary available. |
| [GL_RENDERBUFFER_WIDTH](#uid-3209860fca) | No summary available. |
| [GL_RENDERER](#uid-51fb90f0c8) | No summary available. |
| [GL_RGBA](#uid-26aa9a03a4) | No summary available. |
| [GL_RGBA8](#uid-08cdcf4aff) | No summary available. |
| [GL_SAMPLES](#uid-06ff3d230b) | No summary available. |
| [GL_SCISSOR_TEST](#uid-2709714dcb) | No summary available. |
| [GL_STACK_OVERFLOW](#uid-bd2f046f83) | No summary available. |
| [GL_STACK_UNDERFLOW](#uid-b7d87e1b83) | No summary available. |
| [GL_STATIC_DRAW](#uid-4e284ed58c) | No summary available. |
| [GL_STENCIL_ATTACHMENT](#uid-0edc4216c0) | No summary available. |
| [GL_STENCIL_BITS](#uid-80dd27b133) | No summary available. |
| [GL_STENCIL_BUFFER_BIT](#uid-41abfdb505) | No summary available. |
| [GL_STENCIL_INDEX8](#uid-f79e49d521) | No summary available. |
| [GL_TEXTURE0](#uid-3010663cb6) | No summary available. |
| [GL_TEXTURE_2D](#uid-d5f6820656) | No summary available. |
| [GL_TEXTURE_BINDING_2D](#uid-14ca803321) | No summary available. |
| [GL_TEXTURE_BINDING_RECTANGLE](#uid-c60f1f2863) | No summary available. |
| [GL_TEXTURE_MAG_FILTER](#uid-61af057535) | No summary available. |
| [GL_TEXTURE_MIN_FILTER](#uid-8433a521b1) | No summary available. |
| [GL_TEXTURE_RECTANGLE](#uid-27ba1af2c3) | No summary available. |
| [GL_TRIANGLES](#uid-3e0b4812bf) | No summary available. |
| [GL_TRIANGLE_FAN](#uid-42b451330d) | No summary available. |
| [GL_UNSIGNED_BYTE](#uid-2388833b83) | No summary available. |
| [GL_UNSIGNED_INT_8_8_8_8_REV](#uid-a9c2f4bd72) | No summary available. |
| [GL_UNSIGNED_SHORT](#uid-b87b956a38) | No summary available. |
| [GL_VENDOR](#uid-00f3d04751) | No summary available. |
| [GL_VERSION](#uid-9a99414784) | No summary available. |
| [GL_VERTEX_SHADER](#uid-73558fd501) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-0ffb5002d2"></span>

### GL_ACTIVE_TEXTURE Field

```csharp
public int GL_ACTIVE_TEXTURE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-189c1f291e"></span>

### GL_ARRAY_BUFFER Field

```csharp
public int GL_ARRAY_BUFFER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-58b52fc097"></span>

### GL_BGRA Field

```csharp
public int GL_BGRA
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-decc73c4ef"></span>

### GL_COLOR_ATTACHMENT0 Field

```csharp
public int GL_COLOR_ATTACHMENT0
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-31c7c26d12"></span>

### GL_COLOR_BUFFER_BIT Field

```csharp
public int GL_COLOR_BUFFER_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ca9523e89d"></span>

### GL_COMPILE_STATUS Field

```csharp
public int GL_COMPILE_STATUS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-86be639a64"></span>

### GL_CONTEXT_COMPATIBILITY_PROFILE_BIT Field

```csharp
public int GL_CONTEXT_COMPATIBILITY_PROFILE_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-53a1d87692"></span>

### GL_CONTEXT_CORE_PROFILE_BIT Field

```csharp
public int GL_CONTEXT_CORE_PROFILE_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8503d80ea7"></span>

### GL_CONTEXT_LOST Field

```csharp
public int GL_CONTEXT_LOST
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-84ade7c718"></span>

### GL_CONTEXT_PROFILE_MASK Field

```csharp
public int GL_CONTEXT_PROFILE_MASK
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-694571cd46"></span>

### GL_CULL_FACE Field

```csharp
public int GL_CULL_FACE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-37a6e8c95f"></span>

### GL_DEPTH24_STENCIL8 Field

```csharp
public int GL_DEPTH24_STENCIL8
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-177eb0a8e4"></span>

### GL_DEPTH_ATTACHMENT Field

```csharp
public int GL_DEPTH_ATTACHMENT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0c2b321034"></span>

### GL_DEPTH_BUFFER_BIT Field

```csharp
public int GL_DEPTH_BUFFER_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0b78b075b7"></span>

### GL_DEPTH_COMPONENT Field

```csharp
public int GL_DEPTH_COMPONENT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-062d42e818"></span>

### GL_DEPTH_COMPONENT16 Field

```csharp
public int GL_DEPTH_COMPONENT16
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a6c8481b11"></span>

### GL_DEPTH_STENCIL Field

```csharp
public int GL_DEPTH_STENCIL
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5bf023d3c4"></span>

### GL_DEPTH_TEST Field

```csharp
public int GL_DEPTH_TEST
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9c8182f17f"></span>

### GL_DEVICE_LUID_EXT Field

```csharp
public int GL_DEVICE_LUID_EXT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ed7755e3cd"></span>

### GL_DRAW_FRAMEBUFFER Field

```csharp
public int GL_DRAW_FRAMEBUFFER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8e7c2ab8de"></span>

### GL_ELEMENT_ARRAY_BUFFER Field

```csharp
public int GL_ELEMENT_ARRAY_BUFFER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-18c09d2a9e"></span>

### GL_EXTENSIONS Field

```csharp
public int GL_EXTENSIONS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8ed4c0bdc2"></span>

### GL_FLOAT Field

```csharp
public int GL_FLOAT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-61f4ecb599"></span>

### GL_FRAGMENT_SHADER Field

```csharp
public int GL_FRAGMENT_SHADER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-28969d39e1"></span>

### GL_FRAMEBUFFER Field

```csharp
public int GL_FRAMEBUFFER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-dcb078eba6"></span>

### GL_FRAMEBUFFER_BINDING Field

```csharp
public int GL_FRAMEBUFFER_BINDING
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-434b74b448"></span>

### GL_FRAMEBUFFER_COMPLETE Field

```csharp
public int GL_FRAMEBUFFER_COMPLETE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e9fc4aa46b"></span>

### GL_GREATER Field

```csharp
public int GL_GREATER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-129576563e"></span>

### GL_INFO_LOG_LENGTH Field

```csharp
public int GL_INFO_LOG_LENGTH
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f326a9ce7b"></span>

### GL_INVALID_ENUM Field

```csharp
public int GL_INVALID_ENUM
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-7fdeeaafa6"></span>

### GL_INVALID_FRAMEBUFFER_OPERATION Field

```csharp
public int GL_INVALID_FRAMEBUFFER_OPERATION
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-1661accf13"></span>

### GL_INVALID_OPERATION Field

```csharp
public int GL_INVALID_OPERATION
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a8329141a1"></span>

### GL_INVALID_VALUE Field

```csharp
public int GL_INVALID_VALUE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-568f35d009"></span>

### GL_LESS Field

```csharp
public int GL_LESS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9448dbbcda"></span>

### GL_LINEAR Field

```csharp
public int GL_LINEAR
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fc4ff05d88"></span>

### GL_LINK_STATUS Field

```csharp
public int GL_LINK_STATUS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8826cfaeb1"></span>

### GL_MAJOR_VERSION Field

```csharp
public int GL_MAJOR_VERSION
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-09d81efe2c"></span>

### GL_MINOR_VERSION Field

```csharp
public int GL_MINOR_VERSION
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-cf1f7f5377"></span>

### GL_NEAREST Field

```csharp
public int GL_NEAREST
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ebbb371fef"></span>

### GL_NO_ERROR Field

```csharp
public int GL_NO_ERROR
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-7fba9a19c4"></span>

### GL_NUM_EXTENSIONS Field

```csharp
public int GL_NUM_EXTENSIONS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-4a5b644eed"></span>

### GL_OUT_OF_MEMORY Field

```csharp
public int GL_OUT_OF_MEMORY
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-66d5cca0d0"></span>

### GL_READ_FRAMEBUFFER Field

```csharp
public int GL_READ_FRAMEBUFFER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bfcb0499cb"></span>

### GL_READ_FRAMEBUFFER_BINDING Field

```csharp
public int GL_READ_FRAMEBUFFER_BINDING
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8ad9129883"></span>

### GL_RENDERBUFFER Field

```csharp
public int GL_RENDERBUFFER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ef4b04f765"></span>

### GL_RENDERBUFFER_BINDING Field

```csharp
public int GL_RENDERBUFFER_BINDING
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e99d9ff888"></span>

### GL_RENDERBUFFER_HEIGHT Field

```csharp
public int GL_RENDERBUFFER_HEIGHT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3209860fca"></span>

### GL_RENDERBUFFER_WIDTH Field

```csharp
public int GL_RENDERBUFFER_WIDTH
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-51fb90f0c8"></span>

### GL_RENDERER Field

```csharp
public int GL_RENDERER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-26aa9a03a4"></span>

### GL_RGBA Field

```csharp
public int GL_RGBA
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-08cdcf4aff"></span>

### GL_RGBA8 Field

```csharp
public int GL_RGBA8
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-06ff3d230b"></span>

### GL_SAMPLES Field

```csharp
public int GL_SAMPLES
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2709714dcb"></span>

### GL_SCISSOR_TEST Field

```csharp
public int GL_SCISSOR_TEST
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-bd2f046f83"></span>

### GL_STACK_OVERFLOW Field

```csharp
public int GL_STACK_OVERFLOW
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b7d87e1b83"></span>

### GL_STACK_UNDERFLOW Field

```csharp
public int GL_STACK_UNDERFLOW
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-4e284ed58c"></span>

### GL_STATIC_DRAW Field

```csharp
public int GL_STATIC_DRAW
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-0edc4216c0"></span>

### GL_STENCIL_ATTACHMENT Field

```csharp
public int GL_STENCIL_ATTACHMENT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-80dd27b133"></span>

### GL_STENCIL_BITS Field

```csharp
public int GL_STENCIL_BITS
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-41abfdb505"></span>

### GL_STENCIL_BUFFER_BIT Field

```csharp
public int GL_STENCIL_BUFFER_BIT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f79e49d521"></span>

### GL_STENCIL_INDEX8 Field

```csharp
public int GL_STENCIL_INDEX8
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3010663cb6"></span>

### GL_TEXTURE0 Field

```csharp
public int GL_TEXTURE0
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d5f6820656"></span>

### GL_TEXTURE_2D Field

```csharp
public int GL_TEXTURE_2D
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-14ca803321"></span>

### GL_TEXTURE_BINDING_2D Field

```csharp
public int GL_TEXTURE_BINDING_2D
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c60f1f2863"></span>

### GL_TEXTURE_BINDING_RECTANGLE Field

```csharp
public int GL_TEXTURE_BINDING_RECTANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-61af057535"></span>

### GL_TEXTURE_MAG_FILTER Field

```csharp
public int GL_TEXTURE_MAG_FILTER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8433a521b1"></span>

### GL_TEXTURE_MIN_FILTER Field

```csharp
public int GL_TEXTURE_MIN_FILTER
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-27ba1af2c3"></span>

### GL_TEXTURE_RECTANGLE Field

```csharp
public int GL_TEXTURE_RECTANGLE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-3e0b4812bf"></span>

### GL_TRIANGLES Field

```csharp
public int GL_TRIANGLES
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-42b451330d"></span>

### GL_TRIANGLE_FAN Field

```csharp
public int GL_TRIANGLE_FAN
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2388833b83"></span>

### GL_UNSIGNED_BYTE Field

```csharp
public int GL_UNSIGNED_BYTE
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a9c2f4bd72"></span>

### GL_UNSIGNED_INT_8_8_8_8_REV Field

```csharp
public int GL_UNSIGNED_INT_8_8_8_8_REV
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b87b956a38"></span>

### GL_UNSIGNED_SHORT Field

```csharp
public int GL_UNSIGNED_SHORT
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-00f3d04751"></span>

### GL_VENDOR Field

```csharp
public int GL_VENDOR
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9a99414784"></span>

### GL_VERSION Field

```csharp
public int GL_VERSION
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-73558fd501"></span>

### GL_VERTEX_SHADER Field

```csharp
public int GL_VERTEX_SHADER
```

</section>

</ApiRefPage>

